--- a/logstash.conf
+++ b/logstash.conf
@@ -18,7 +18,7 @@ output {
       elasticsearch {
         hosts    => [ 'elasticsearch:9200' ]
         user     => 'elastic'
-        password => '+YuWAye_lJhJ0Hwmvzm_'
+        password => ''
         index => "logstash-%{+YYYY.MM.dd}"
       }
 }
