updated network elk

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   elasticsearch:
     build:
@@ -20,6 +21,9 @@ services:
       memlock:
         soft: 2097152
         hard: 2097152
+    networks:
+      - elk
+
   kibana:
     image: docker.elastic.co/kibana/kibana:8.5.0
     container_name: kibana
@@ -35,6 +39,9 @@ services:
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=
       - XPACK_SECURITY_ENABLED=true
+    networks:
+      - elk
+
   logstash:
     image: docker.elastic.co/logstash/logstash:8.5.0
     container_name: logstash
@@ -46,8 +53,13 @@ services:
       - elasticsearch
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    
+    networks:
+      - elk
+
 volumes:
   elasticsearch-data:
     driver: local
 
+networks:
+  elk:
+    driver: bridge
